eShopMicroService/apps/overlays/discount/dev/discount-api-green-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-api
  labels:
    app: discount-api
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discount-api
      version: green
  template:
    metadata:
      labels:
        app: discount-api
        version: green
    spec:
      containers:
        - name: discount-api
          image: myregistry.azurecr.io/discount-api:v1.1.0
