eShopMicroService/apps/overlays/discount/dev/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: discount-api
spec:
  host: discount-api
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
